// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article active rendering should render active correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        www.google.nl
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#037DE2",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="article-icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      ? min
    </Text>
  </View>
</View>
`;

exports[`Article downloaded rendering should render downloaded correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        www.google.nl
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#03A87C",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="article-icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      ? min
    </Text>
  </View>
</View>
`;

exports[`Article full rendering should render full correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        Jordy on Test
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      >
        Test title
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="article-icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      2 min
    </Text>
  </View>
</View>
`;

exports[`Article loading rendering should render loading correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        www.google.nl
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <ActivityIndicator
              animating={true}
              color="#000"
              hidesWhenStopped={true}
              size="small"
              testID="article-activity-indicator"
            />
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      ? min
    </Text>
  </View>
</View>
`;

exports[`Article minimal rendering should render minimal correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        www.google.nl
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="article-icon-play"
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      ? min
    </Text>
  </View>
</View>
`;

exports[`Article playing rendering should render playing correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16,
        "width": "100%",
      },
      null,
    ]
  }
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingRight": 28,
          }
        }
        testID="article-source-name"
      >
        www.google.nl
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexBasis": "auto",
          "flexGrow": 0,
          "marginBottom": 6,
          "marginTop": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "600",
            "lineHeight": 21,
          }
        }
        testID="article-title"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "baseline",
          "flex": 1,
          "flexBasis": "auto",
          "flexDirection": "row",
          "flexGrow": 0,
          "flexShrink": 1,
          "height": 16,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-playable"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-downloaded"
      >
        
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#C5C5C5",
              "fontSize": 9,
            },
            Object {
              "marginRight": 4,
            },
            Object {
              "fontFamily": "FontAwesome5Free-Solid",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {
              "fontWeight": "900",
            },
          ]
        }
        testID="article-icon-favorited"
      >
        
      </Text>
      <Text
        style={
          Object {
            "color": "#888888",
            "fontSize": 12,
            "fontWeight": "100",
            "paddingLeft": 2,
          }
        }
      >
        Added 
        less than a minute
         ago
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginLeft": 16,
        "width": 80,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#C5C5C5",
          "borderRadius": 4,
          "height": 80,
          "justifyContent": "center",
          "width": 80,
        }
      }
    >
      <View
        style={
          Object {
            "height": 30,
            "position": "absolute",
            "width": 30,
          }
        }
      >
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#037DE2",
              "borderRadius": 30,
              "height": 30,
              "justifyContent": "center",
              "opacity": 1,
              "width": 30,
            }
          }
          testID="article-play-button"
        >
          <View>
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 11,
                  },
                  undefined,
                  Object {
                    "fontFamily": "FontAwesome5Free-Solid",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {
                    "fontWeight": "900",
                  },
                ]
              }
              testID="article-icon-pause"
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#888888",
          "fontSize": 12,
          "fontWeight": "100",
          "marginTop": 6,
          "textAlign": "center",
        }
      }
      testID="article-duration"
    >
      ? min
    </Text>
  </View>
</View>
`;
